--- a/latex/referances.bib
+++ b/latex/referances.bib
@@ -1,5 +1,5 @@
-% Not sure about this one ...
-%@book{bishop2006pattern,
+Not sure about this one ...
+book{bishop2006pattern,
 @book{bishop,
   title={Pattern recognition and machine learning},
   author={Bishop, Christopher M and others},
@@ -9,7 +9,7 @@
 }
 
 
-%@book{hastie2009elements,
+book{hastie2009elements,
 @book{modstat,
   title={The elements of statistical learning},
   author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome and Hastie, T and Friedman, J and Tibshirani, R},
@@ -19,18 +19,15 @@
   publisher={Springer}
 }
 
-%@book{hastie2009elements,
+book{hastie2009elements,
 @book{breiman,
-  title={The elements of statistical learning},
-  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome and Hastie, T and Friedman, J and Tibshirani, R},
-  volume={2},
-  number={1},
-  year={2009},
-  publisher={Springer}
+  title={Classification and Regression Trees},
+  author={Leo Breiman, Jerome Friedman, Richard Olshen, Charles Stone},
+  year={1984},
+  publisher={Wadsworth International Group}
 }
 
-
-%@article{friedman2001greedy,
+article{friedman2001greedy,
 @article{friedman,
   title={Greedy function approximation: a gradient boosting machine},
   author={Friedman, Jerome H},
