--- a/latex/mybib.bib
+++ b/latex/mybib.bib
@@ -2,6 +2,47 @@
 % Encoding: UTF-8
 
 
+@Article{adabag,
+  Title                    = {{adabag}: An {R} Package for Classification with Boosting and Bagging},
+  Author                   = {Esteban Alfaro and Mat\'ias G\'amez and Noelia Garc\'ia},
+  Journal                  = {Journal of Statistical Software},
+  Year                     = {2013},
+  Number                   = {2},
+  Pages                    = {1--35},
+  Volume                   = {54},
+
+  Url                      = {http://www.jstatsoft.org/v54/i02/}
+}
+
+@Book{bishop,
+  Title                    = {Pattern recognition and machine learning},
+  Author                   = {Bishop, Christopher M and others},
+  Publisher                = {springer New York},
+  Year                     = {2006},
+  Number                   = {4},
+  Volume                   = {4}
+}
+
+@Article{adaboostM1,
+  Title                    = {A Decision-Theoretic Generalization of On-Line Learning and an Application to Boosting},
+  Author                   = {Freund, Yoav and Schapire, Robert E},
+  Journal                  = {Journal of Computer and System Sciences},
+  Year                     = {1997},
+
+  Month                    = {Aug},
+  Number                   = {1},
+  Pages                    = {119–139},
+  Volume                   = {55},
+
+  __markedentry            = {[havakv:6]},
+  Doi                      = {10.1006/jcss.1997.1504},
+  ISSN                     = {0022-0000},
+  Owner                    = {havakv},
+  Publisher                = {Elsevier BV},
+  Timestamp                = {2015.04.10},
+  Url                      = {http://dx.doi.org/10.1006/jcss.1997.1504}
+}
+
 @Article{friedman,
   Title                    = {Greedy function approximation: a gradient boosting machine},
   Author                   = {Friedman, Jerome H},
@@ -9,6 +50,56 @@
   Year                     = {2001},
   Pages                    = {1189--1232},
 
-  Publisher                = {JSTOR}
+  Publisher                = {JSTOR},
+  Url                      = {http://statweb.stanford.edu/~jhf/ftp/trebst.pdf}
+}
+
+@Book{modstat,
+  Title                    = {The elements of statistical learning},
+  Author                   = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome and Hastie, T and Friedman, J and Tibshirani, R},
+  Publisher                = {Springer},
+  Year                     = {2009},
+  Number                   = {1},
+  Volume                   = {2}
+}
+
+@Book{breiman,
+  Title                    = {Classification and Regression Trees},
+  Author                   = {Leo Breiman, Jerome Friedman, Richard Olshen, Charles Stone},
+  Publisher                = {Wadsworth International Group},
+  Year                     = {1984}
+}
+
+@Manual{stats,
+  Title                    = {R: A Language and Environment for Statistical Computing},
+
+  Address                  = {Vienna, Austria},
+  Author                   = {{R Core Team}},
+  Organization             = {R Foundation for Statistical Computing},
+  Year                     = {2014},
+
+  Url                      = {http://www.R-project.org/}
+}
+
+@Manual{rpart,
+  Title                    = {rpart: Recursive Partitioning and Regression Trees},
+  Author                   = {Terry Therneau and Beth Atkinson and Brian Ripley},
+  Note                     = {R package version 4.1-8},
+  Year                     = {2014},
+
+  Url                      = {http://CRAN.R-project.org/package=rpart}
+}
+
+@Book{mass,
+  Title                    = {Modern Applied Statistics with S},
+  Author                   = {W. N. Venables and B. D. Ripley},
+  Publisher                = {Springer},
+  Year                     = {2002},
+
+  Address                  = {New York},
+  Edition                  = {Fourth},
+  Note                     = {ISBN 0-387-95457-0},
+
+  Url                      = {http://www.stats.ox.ac.uk/pub/MASS4}
 }
 
