--- a/latex/referances.bib
+++ b/latex/referances.bib
@@ -5,7 +5,8 @@ book{bishop2006pattern,
   author={Bishop, Christopher M and others},
   volume={4},
   number={4},
-  publisher={springer New York}
+  year={2006},
+  publisher={springer New York},
 }
 
 
@@ -34,5 +35,19 @@ article{friedman2001greedy,
   journal={Annals of statistics},
   pages={1189--1232},
   year={2001},
-  publisher={JSTOR}
+  note={\url{http://statweb.stanford.edu/~jhf/ftp/trebst.pdf}},
 }
+  publisher={JSTOR}
+
+@article{adaboostM1,
+  title={A decision-theoretic generalization of on-line learning and an application to boosting},
+  author={Yoav Freund and Robert E. Schapire},
+  journal={Journal of Computer and System Sciences, 55(1)},
+  pages={119--139},
+  year={2001},
+  note={\url{http://ac.els-cdn.com/S002200009791504X/1-s2.0-S002200009791504X-main.pdf?_tid=75c5b7ac-df7c-11e4-a7e5-00000aacb362&acdnat=1428668817_21ce7c8079f996f10b9be1db43124180}},
+}
+
+
+. . , :119–139,
+August 1997
